--- a/index.html
+++ b/index.html
@@ -18,30 +18,38 @@
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">beautysalon.</a>
+        <a class="logo" href="#">beauty<span>salon</span>.</a>
         <div class="menu">...</div>
       </nav>
     </header>
 
     <main>
-      <section>
-        <div class="container">
-          <img
-            src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=1000&q=60"
-            alt="Mulher sorrindo peteando outra mulher"
-          />
-          <h1>Saúde natural para os seus cabelos</h1>
-          <p>
-            Um salão exclusivo em São Paulo, especializado em tratamentos
-            naturais.
-          </p>
-          <a href="#">Agendar uma horário</a>
+      <section class="section" id="home">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=1000&q=60"
+              alt="Mulher sorrindo peteando outra mulher"
+            />
+          </div>
+          <div class="text">
+            <h1>Saúde natural para os seus cabelos</h1>
+            <p>
+              Um salão exclusivo em São Paulo, especializado em tratamentos
+              naturais.
+            </p>
+            <a class="button" href="#">Agendar uma horário</a>
+          </div>
         </div>
       </section>
 
-      <section></section>
-      <section></section>
-      <section></section>
+      <div class="divider-1"></div>
+
+      <section class="section">
+        <div class="conteiner">Outra Section</div>
+      </section>
+      <section class="section"></section>
+      <section class="section"></section>
     </main>
 
     <footer></footer>
